--- a/main.html
+++ b/main.html
@@ -10,7 +10,9 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+<div>
+        <p>My current favourite song is <a href="[YouTube_URL]" target="_blank">[song_name]</a>.</p>
+    </div>
 </body>
 
 </html>
